# external_sorting

./: .gitignore  CMakeLists.txt  build.ps1  data.txt  external_sorting.pro  fs_path_test.cpp  generate_qt_stab.py  generate_qt_stub.py  generate_random.cpp  generate_vscode_files.py  hello_world.cc  mergesort.cpp  prepare.ps1
generate_random/: generate_random.pro
hello_world/: hello_world.pro
mergesort/: mergesort.pro
